:sparkles: Add function autentication route, Documentation swagger route Login and user
